# Music-Scanner

./: .gitignore  README.md  main.py  pyproject.toml
schemas/: 000-complete.sql
src/: config.py  db.py  deez.py  models.py  utils.py
