[project]
name = "music-scanner"
version = "0.1.0"
description = "A simple tool to scan your local music files and identify missing albums."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mariadb>=1.1.12",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
